Process Hacker

2.29
 * NEW/IMPROVED:
   * Added App ID column for processes
   * Added new ASLR information for Windows 8
   * Added Restart to Boot Options and Hybrid Shutdown menu items for
     Windows 8
   * Added ability to specify processes by their names and inject and
     unload DLLs in command line
   * Removed 512 character limit when copying text
   * Updated ExtendedServices plugin:
     * Added new triggers for Windows 8
     * Fixed bug when restarting services
   * Updated ExtendedTools plugin:
     * Improved support for multiple GPUs (again)
     * GPU column now respects "Include CPU usage of children" option
   * Updated ToolStatus plugin:
     * Fixed controls not being properly hidden/removed from the window when disabled
 * FIXED:
   * Fixed Load Count column sorting bug
   * Fixed signature verification on Windows 8
   * Fixed task scheduler information on Windows 8
   * Fixed drag bug in tree list
   * Fixed KProcessHacker bug affecting TmTx objects
   * Fixed Run As feature on Windows 8
   * Fixed bug where -settings parameter is not propagated
   * Fixed tab key behavior on main window

2.28
 * NEW/IMPROVED:
   * peview now resolves .lnk targets
   * Fixed Ctrl+A for processes, services and network connections and
     added Ctrl+A for other windows
   * Changed confirmation prompts to select the destructive action by
     default
   * Updated DotNetTools plugin:
     * Fixed inaccurate stack traces for certain .NET programs
   * Updated ExtendedTools plugin:
     * Fixed network graph scaling
   * Updated ToolStatus plugin:
     * Added search box
   * Updated Updater plugin
 * FIXED:
   * Fixed Verification Status column sorting bug in module list
   * Fixed rare System Information crash
   * Fixed bug in opening process handles
   * Fixed freezing when viewing stack traces of certain system threads

2.27
 * NEW/IMPROVED:
   * Updated OnlineChecks plugin:
     * 2012-01-16: Updated VirusTotal uploader and added hash checking
 * FIXED: